--- a/2.2.Practice Guide.md
+++ b/2.2.Practice Guide.md
@@ -39,7 +39,8 @@ grep -v '^#' 1.gtf | awk '$1=="IV" {print $3}' | sort | uniq -c | sort
 # head 取前2行
 grep -v '^#' 1.gtf | awk '$1!="IV" && $3=="gene" && $7=="-" {print $5-$4+1}' | sort -n -r | head -2
 
-
+# 14733
+# 12279
 ```
 
 4.寻找 **XV** 号染色体上长度**最长的5条**基因，并输出**基因 id** 及对应的**长度**。
@@ -50,6 +51,12 @@ grep -v '^#' 1.gtf | awk '$1!="IV" && $3=="gene" && $7=="-" {print $5-$4+1}' | s
 # sort 根据长度-r排序(降序)
 # head 取前5行
 grep -v '^#' 1.gtf | awk '$1=="XV" && $3=="gene" {split($10,x,";");name=x[1];gsub("\"","",name);print name,$5-$4+1}' | sort -n -r -k2 | head -5
+
+# YOL081W 9240
+# YOR396W 5391
+# YOR343W-B 5314
+# YOR192C-B 5314
+# YOR142W-B 5269
 ```
 
 5.统计1.gtf **列数**。
@@ -58,4 +65,6 @@ grep -v '^#' 1.gtf | awk '$1=="XV" && $3=="gene" {split($10,x,";");name=x[1];gsu
 # awk 强制以tab为分隔符。输出每行的NF(字段数，列数)
 # awk 每行累加。输出最后一次结果。
 awk -F "\t" '{print NF}' 1.gtf | awk '{sum+=$1;} END {print sum;}'
+
+# 380228
 ```
