--- a/2.3.Linux Bash.md
+++ b/2.3.Linux Bash.md
@@ -12,9 +12,9 @@ cd ./bash_homework
 1.写出一个 bash 脚本，可以使它自动读取一个文件夹（例如bash_homework/）的内容，将该文件夹下文件的名字输出到 filename.txt, 子文件夹的名字输出到 dirname.txt 。
 
 ```shell
-touch readname.sh
-chmod u+x readname.sh
-vi readname.sh
+touch readname.sh	#创建.sh文件
+chmod u+x readname.sh	#增加执行权限
+vi readname.sh	#增加执行权限
 ```
 
 ```shell
@@ -36,6 +36,8 @@ do
 done
 
 exit 0
+#遍历bash_homework文件夹
+#[ -f ]判断是否为文件；[ -d ]判断是否为目录。分别输出到filename.txt和dirname.txt
 ```
 
 ```shell
